# sy

./: .gitignore  .mailmap  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  FINAL_STATUS.md  PERFORMANCE_ANALYSIS.md  README.md  RELEASE_NOTES_v0.0.23.md  RELEASE_NOTES_v0.0.24.md  RELEASE_NOTES_v0.0.25.md  REVIEW.md  SESSION_SUMMARY.md  release_notes_v0.0.42.md
.claude/: CLAUDE.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
ai/: DECISIONS.md  RESEARCH.md  STATUS.md  TODO.md
ai/research/: bidirectional_sync_2025.md  compression_auto_detection.md  enhanced_progress_display.md  macos_specific_features.md  optimization_audit_v0.0.40.md  performance_regression_v0.0.40.md  phase5_verification_design.md  sparse_file_improvements.md  ssh_multiplexing_2025.md  symlink_loop_detection.md
ai/research/archive/: STATUS_v0.0.17.md
benches/: comparative_bench.rs  compress_bench.rs  delta_bench.rs  scale_bench.rs  sync_bench.rs
docs/: BENCHMARK_RESULTS.md  CODE_QUALITY.md  EVALUATION_v0.0.23.md  EVALUATION_v0.0.28.md  FILESYSTEM_SUPPORT.md  LINUX_SUPPORT.md  MACOS_SUPPORT.md  MODERNIZATION_ROADMAP.md  OPTIMIZATIONS.md  PERFORMANCE.md  PERFORMANCE_BASELINE.md  PHASE2_PLAN.md  PHASE4_DESIGN.md  PHASE5_DESIGN.md  STATUS_2025-10-20.md  STATUS_v0.0.17.md  TROUBLESHOOTING.md  WINDOWS_SUPPORT.md
docs/architecture/: BIDIRECTIONAL_SYNC_DESIGN.md  MODERNIZATION_ROADMAP.md  ROADMAP_v0.1.0.md
man/: sy-remote.1  sy.1
scripts/: bench-compare.sh  benchmark.sh  profile.sh  profile_delta.sh  profile_detailed.sh  test_delta_optimization.sh
src/: cli.rs  config.rs  error.rs  filter.rs  fs_util.rs  lib.rs  main.rs  path.rs  perf.rs  resource.rs  sparse.rs  temp_file.rs
src/bisync/: classifier.rs  engine.rs  mod.rs  resolver.rs  state.rs
src/compress/: mod.rs
src/delta/: applier.rs  checksum.rs  generator.rs  mod.rs  rolling.rs
src/hooks/: mod.rs
src/integrity/: blake3.rs  mod.rs  xxhash3.rs
src/ssh/: config.rs  connect.rs  mod.rs
src/sync/: checksumdb.rs  dircache.rs  mod.rs  output.rs  ratelimit.rs  resume.rs  scale.rs  scanner.rs  strategy.rs  transfer.rs  watch.rs
src/transport/: dual.rs  local.rs  mod.rs  router.rs  s3.rs  ssh.rs
templates/: README.md  node.syignore  python.syignore  rust.syignore
tests/: compression_integration.rs  delta_sync_test.rs  edge_cases_test.rs  integration_test.rs  performance_test.rs  property_test.rs
