[package]
name = "sy"
version = "0.0.22"
edition = "2021"
authors = ["Nick Russo <nick@nijaru.dev>"]
description = "Modern rsync alternative - Fast, parallel file synchronization"
repository = "https://github.com/nijaru/sy"
license = "MIT"
keywords = ["rsync", "sync", "file-transfer", "backup", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# CLI & Config
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"

# Async runtime (Phase 2: used for transport abstraction)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync", "signal"] }
async-trait = "0.1"

# Filesystem
walkdir = "2"
ignore = "0.4"
filetime = "0.2"
tempfile = "3"
glob = "0.3"
notify = "6.0"
libc = "0.2"
xattr = "1.3"
exacl = "0.12"
bincode = "1.3"

# Progress & Logging
indicatif = "0.17"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Hash functions (for future phases, included now to avoid rebuild churn)
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1"
hex = "0.4"
base64 = "0.22"

# Compression
zstd = "0.13"  # Level 3: 8.7 GB/s, best ratio
lz4_flex = "0.11"  # 23 GB/s, faster but lower ratio

# Parallel processing
rayon = "1.10"
num_cpus = "1.16"  # CPU count detection for parallel scanning

# Scale (Phase 11)
fastbloom = "0.7"  # Bloom filters for efficient deletion checks

# SSH (Phase 2)
ssh2 = "0.9"
whoami = "1"
dirs = "5"
regex = "1"
futures = "0.3.31"

# S3 / Cloud Storage (Phase 10)
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.52"
aws-smithy-types = "1.2"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
proptest = "1"

[[bench]]
name = "sync_bench"
harness = false

[[bench]]
name = "comparative_bench"
harness = false

[[bench]]
name = "delta_bench"
harness = false

[[bench]]
name = "compress_bench"
harness = false

[[bench]]
name = "scale_bench"
harness = false

[[bin]]
name = "sy-remote"
path = "src/bin/sy-remote.rs"
